# rusty-bank

./: Cargo.toml  README.md
config/: default.toml  postgres.yaml
src/: lib.rs  main.rs
src/domain/: account.rs  euro_cent.rs  mod.rs
src/infra/: mod.rs  server.rs
src/infra/account/: in_mem_ids_projection.rs  lru_cache_factory.rs  mod.rs
